Proxy microfrontend assets through shell
